@@ -127,6 +127,9 @@
       
       \item If \code{na.action} was used in \code{model.frame}, the 
       original data could be modified. (\PR{16436})
+      
+      \item \code{getGraphicsEvent} could cause a crash if a graphics
+      window was closed while it was in use. (\PR{16438})
     }
   }
 }
